# SofMebel_Backend

./: .env.example  .gitignore  Makefile  README.md  TODO  pyproject.toml  requirements.txt
apps/: admin.py  filters.py  permissions.py  urls.py  utils.py
apps/management/commands/: set_webhook.py
apps/models/: __init__.py  base.py  common.py  manager.py  order.py  product.py  product_model.py  settings.py  user.py
apps/serializers/: __init__.py  common.py  order.py  product.py  user.py
apps/views/: __init__.py  common.py  order.py  product.py  settings.py  telegram_webhook.py  user.py
root/: drf_settings.py  jazzmin_settings.py  settings.py  urls.py
